# health-one

./: .env.example  .gitignore  AI_START_HERE.md  Glossary.md  Makefile  PROJECT-CONTEXT.md  PROJECT-MAP.md  PROJECT-MEMORY.md  PROJECT.md  README.md  VERSION.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 00-CONSTITUTION.md  01-GOVERNANCE.md  02-AI_START_HERE.md  03-PROJECT_MAP.md  04-PROJECT_MEMORY.md  05-PROJECT_CONTEXT.md  06-GLOSSARY.md
docs/00_Foundation/: CHARTER.md  MANIFESTO.md
docs/01_Product/: BP-002-MVP-and-First-Value-Loop.md  BP-003-Health-One-Lifecycle.md  Store-Service-Workflow-Draft.md  Store-Workbench-Initial-Product-Outline.md  Store-Workbench-MVP-Screen-List.md
docs/02_Architecture/: BP-001-World-Model.md  BP-004-Health-One-Domain-Model.md
docs/03_AI/: AI-Memory-and-RAG-Design-Draft.md  GOV-003-AI-Onboarding.md  Knowledge-Base-Structure-Design.md
docs/adr/: ADR-001-legacy-migration.md  ADR-002-TECHNICAL-STACK.md
docs/architecture/: ARCH-000-CORE-ARCHITECTURE-REVIEW.md  RFC-001-ALIGNMENT-REPORT.md  RFC-001-DOMAIN-MODEL.md  RFC-002-DATA-MODEL.md
docs/brand/: BRAND-001-Health-One-Brand-Guideline-V1.0.md
docs/founder/: FD-003-REPOSITORY-FIRST.md  FD-005-LEGACY-FREEZE.md  (+3 more)
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
health_one/: __init__.py
scripts/: create_demo_staff.py
tests/: __init__.py  conftest.py  test_api_auth.py  test_api_identity.py  test_api_plan.py  test_api_profile.py  test_api_session.py  test_api_timeline.py  test_health.py  test_models.py  test_store_models.py
(+199 files in other folders)
