[project]
name = "health-one"
version = "0.1.0"
description = "Health One — AI-powered health management platform"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # Depends/Query in FastAPI defaults — idiomatic pattern
]

[tool.ruff.lint.per-file-ignores]
"health_one/platform/models/*.py" = [
    "F821", # SQLAlchemy relationship() forward references across model files
]
"health_one/store/models/*.py" = [
    "F821", # SQLAlchemy relationship() forward references across model files
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=health_one --cov-report=term-missing"
